@@ -167,6 +167,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Special:AllPages: Move hardcoded styles from code to CSS
 * (bug 6092) Add parser function equivalents of {{REVISIONID}},
   {{REVISIONTIMESTAMP}}  (and friends) and {{REVISIONUSER}} magic words
+* (bug 18529) New hook: SoftwareInfo for adding information about the software
+  to Special:Version
 
 === Bug fixes in 1.15 ===
 * (bug 16968) Special:Upload no longer throws useless warnings.
